[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/BuildPopup.gd" id=1]

[node name="BuildPopup" type="Control"]
script = ExtResource( 1 )
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]

[node name="BasicButton" type="Button" parent="VBoxContainer"]
text = "Build Basic Tower"

[node name="SplashButton" type="Button" parent="VBoxContainer"]
text = "Build Splash Tower"
